# ssla-rt

./: .gitignore  CLAUDE.md  CMakeLists.txt  CPU_PERF_STATUS.md  LICENSE  README.md
docs/: DEV_GUIDE.md  DEV_LOG.md  PROFILE.md
docs/archive/: STATUS.md
docs/handbook/: build.sh  handbook.tex
include/: lat_stats.h  oracle.h  spsc.h  ssla_fused_layers.h  ssla_kernels.h  ssla_neon_linear.h  ssla_neon_lru.h  timed.h
orin/: HYBRID_DESIGN.md  PIPELINE_DESIGN.md  PROFILE_2026-05-13.md  README.md  RISK_RETIREMENT.md  STATUS.md  analyze_coalescing.py  bench_proto_full.py  bench_s2_s3_head.py  bench_s2_s3_head_celled.py  bench_s2_s3_head_w.py  capture_replay.py  demo_live_camera.py  diag_kernel.py  hybrid_runner.py  hybrid_runner_multi.py  live_stage01_bench.py  live_stage0_bench.py  perf_celled.py  perf_celled_multi.py  perf_celled_profile.py  test_proto_full_compile.py
orin/kernels/: proto_layer_pair.cuh  ssla_layer.cuh  ssla_primitives.cuh  ssla_s2_s3_head.cuh  ssla_s2_s3_head_celled.cuh  ssla_s2_s3_head_celled_profile.cuh  ssla_s2_s3_head_w.cuh  ssla_step.cuh
orin/kernels/legacy/: proto_full.cuh
orin/legacy/: bench_throughput.py
orin/orin/: cuda_util.py  hybrid_common.py  multi_block.py  nvrtc_util.py  ring.py  ssla_ref.py  weights.py  weights_ssla.py
orin/tests/: test_layer_forward.py  test_primitives.py  test_proto_layer_pair.py  test_ring_smoke.py  test_ring_unit.py  test_runner_drain.py  test_runner_persistent.py  test_step.py  test_weights_ssla.py  test_weights_unit.py
orin/viz/: event_viewer.py
scripts/: run_scaling.sh
src/: lib_stage01_capi.cpp  lib_stage01_to_gpu.cpp  lib_stage0_capi.cpp  multicore_bench.cpp  oracle_diff.cpp  s1_reference.cpp  s2_decomp_st.cpp  s3_sharded.cpp  s5_locked.cpp  s6_full_locked.cpp  s8_hierarchical.cpp  s_stage0_multicore.cpp  s_stage0_only.cpp  ssla_kernels.cpp
src/legacy/schemes/: s2_pipeline.cpp  s4_owner_shard.cpp  s7_replicated.cpp
tests/: bench_fused.cpp  bench_layer.cpp  bench_matvec12.cpp  bench_matvec24.cpp  bench_sigmoid.cpp
tools/: convert_dsec_ckpt.py  make_ssla_stub.py
